--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,15 @@
         }
     },
     "minimum-stability": "dev",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Spt\\ExceptionHandling\\ExceptionHandlerServiceProvider"
+            ]
+        }
+    },
     "require": {
-        "illuminate/support": "-5"
+        "php": "^7.2",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|^6.0"
     }
 }
